--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
     <script type="module" src="script.js"></script>
   </head>
   <body>
-
+    <form>
+    
+      <label for="">contraseña</label>
+      <input type="text">
+      <label for="">Nombre de usuario</label>
+    <input type="text" placeholder="Ingresa nombre de usuario">
+    <input type="submit">
+    </form>
   </body>
 </html>
